set(sub_dir ${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_VERSION})
message("find test files: " ${sub_dir})
if(EXISTS ${sub_dir})
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)
    aux_source_directory(${sub_dir} src_files)
    add_library(test SHARED ${src_files})
else()
    message(FATAL_ERROR "No subproject found for version ${PROJECT_VERSION}")
endif()